--- a/Junk/(Redundant) The theory of competitive traits/paper.tex
+++ b/Junk/(Redundant) The theory of competitive traits/paper.tex
@@ -25,7 +25,7 @@
 \author{Peter P. Rohde}
 \email[]{dr.rohde@gmail.com}
 \homepage{http://www.peterrohde.org}
-\affiliation{Centre for Quantum Computation and Intelligent Systems (QCIS), Faculty of Engineering \& Information Technology, University of Technology Sydney, NSW 2007, Australia}
+\affiliation{Centre for Quantum Software \& Information (UTS:QSI), University of Technology Sydney, Australia}
 
 \date{\today}
 
@@ -41,6 +41,13 @@
 \maketitle
 
 \section{Definitions}
+
+adopted traits - conciousliy chosen
+
+emergent strategies
+
+
+
 
 Strategies are associated with a trait, not with the group itself.
 
@@ -63,6 +70,8 @@ Inter-trait enhancement. $t_1$ ehnahnces expression of $t_2$ - cooperation
 Indirect competition: piggbacking off the strategy employed by a correlated trait.
 
 If traits are perfectly correlated, their respective trait groups are necessarily identical, $G_{t_1}=G_{t_2}$. Nonetheless, the strategies associated with the traits may be distinct, $\mathcal{S}(t_1)\neq\mathcal{S}(t_2)$.
+
+Associative traits and trait substitution
 
 \subsection{Traits}
 
